k8s/manifests/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: skad
  labels:
    app: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: skad-postgres:latest
          ports:
          - containerPort: 5432
          imagePullPolicy: "Never" # Change this if needed.
          volumeMounts:
            - name: pgpassword
              mountPath: "/run/secrets/postgres-passwd"
              readOnly: true
            - mountPath: /var/lib/postgresql/data
              name: pgdata
      volumes:
        - name: pgpassword
          secret:
            secretName: pgpassword
        - name: pgdata
          persistentVolumeClaim:
            claimName: pgdata
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: skad
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
