k8s/manifests/subscription.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription
  namespace: skad
  labels:
    app: subscription
spec:
  selector:
    matchLabels:
      app: subscription
  replicas: 1
  template:
    metadata:
      labels:
        app: subscription
    spec:
      containers:
        - name: subscription
          image: skad-subscription:latest
          ports:
            - containerPort: 80
          imagePullPolicy: "Never" # Change this if needed.
          volumeMounts:
            - name: config
              mountPath: "/opt/skad/app/k8s/"
              readOnly: true
            - name: pgpassfile
              mountPath: "/run/secrets/postgres"
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: subscription-config
        - name: pgpassfile
          secret:
            secretName: pgpassfile
---
apiVersion: v1
kind: Service
metadata:
  name: subscription
  namespace: skad
  labels:
    app: subscription
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 80
      name: http
      
  selector:
    app: subscription
