k8s/manifests/vulnfeed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vulnfeed
  namespace: skad
  labels:
    app: vulnfeed
spec:
  selector:
    matchLabels:
      app: vulnfeed
  replicas: 1
  template:
    metadata:
      labels:
        app: vulnfeed
    spec:
      containers:
        - name: vulnfeed
          image: skad-vulnfeed:latest
          ports:
            - containerPort: 80
          imagePullPolicy: "Never" # Change this if needed.
          volumeMounts:
          - name: config
            mountPath: "/opt/skad/app/k8s/"
            readOnly: true
          - name: pgpassfile
            mountPath: "/run/secrets/postgres"
            readOnly: true
          startupProbe:
            httpGet:
              path: /api/health/liveness
              port: 80
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health/liveness
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
      volumes:
        - name: config
          configMap:
            name: vulnfeed-config
        - name: pgpassfile
          secret:
            secretName: pgpassfile
---
apiVersion: v1
kind: Service
metadata:
  name: vulnfeed
  namespace: skad
  labels:
    app: vulnfeed
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
      
  selector:
    app: vulnfeed
